feat(tx): msg type query filter and fix duplicated dto
