# api/api.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"fmt"
+	"html/template"
 	"log/slog"
 
 	"github.com/gofiber/fiber/v2"
@@ -33,16 +34,16 @@ func New(cfg *config.Config, logger *slog.Logger, db *orm.Database) *Api {
 // @BasePath /indexer
 
 // @tag.name Blocks
-// @tag.description.markdown Block related operations
+// @tag.description Block related operations
 
 // @tag.name Transactions
-// @tag.description.markdown Transaction related operations
+// @tag.description Transaction related operations
+
+// @tag.name NFT
+// @tag.description NFT related operations
 
 // @tag.name Evm Transactions
-// @tag.description.markdown EVM transaction related operations
-
-// @tag.name Nft
-// @tag.description.markdown NFT token related operations
+// @tag.description EVM transaction related operations
 func (a *Api) Start() error {
 	app := fiber.New(fiber.Config{
 		AppName:               "Rollytics API",
@@ -60,12 +61,20 @@ func (a *Api) Start() error {
 	swaggerConfig := swagger.Config{
 		URL:         "/swagger/doc.json",
 		DeepLinking: true,
+		TagsSorter: template.JS(`function(a, b) {
+			const order = ["Blocks", "Transactions", "NFT", "Evm Transactions"];
+			return order.indexOf(a) - order.indexOf(b);
+		}`),
 	}
+
 	app.Get("/swagger/*", swagger.New(swaggerConfig))
 
 	port := a.cfg.GetListenPort()
 
 	docs.SwaggerInfo.Host = fmt.Sprintf("localhost:%s", port)
+	docs.SwaggerInfo.Title = "Rollytics API"
+	docs.SwaggerInfo.Description = "Rollytics API"
+
 	a.logger.Info("starting API server", slog.String("addr", fmt.Sprintf("http://localhost:%s", port)))
 
 	return app.Listen(":" + port)
